crates/jolt_fmt_cli/tests/snapshots/cli_snapshots__check_mode_accepts_formatted_file_without_user_output.snap
---
source: crates/jolt_fmt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[temp.path().join(\"A.java\")])"
---
status: 0
stdout:
<empty>
stderr:
<empty>
files:
-- A.java --
class A {
}
