crates/jolt_fmt_cli/tests/snapshots/cli_snapshots__check_mode_reports_changed_file_without_writing.snap
---
source: crates/jolt_fmt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[temp.path().join(\"A.java\")])"
---
status: 1
stdout:
A.java
stderr:
1 of 1 file is not formatted
files:
-- A.java --
class A {}
