crates/jolt_fmt_cli/tests/snapshots/cli_snapshots__missing_path_reports_error.snap
---
source: crates/jolt_fmt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[])"
---
status: 1
stdout:
<empty>
stderr:
Missing.java: path does not exist
files:
<none>
