crates/jolt_fmt_cli/tests/snapshots/cli_snapshots__stdin_parse_errors_use_stdin_filename_in_diagnostics.snap
---
source: crates/jolt_fmt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[])"
---
status: 1
stdout:
<empty>
stderr:
src/Main.java:1:7: java.parse.expected_syntax: expected type name
src/Main.java:2:1: java.parse.expected_syntax: expected `}` after type body
formatting failed
files:
<none>
